force-app/main/default/objects/Creditsafe_Company_Advisor__c/Creditsafe_Company_Advisor__c.object-meta.xml
<CustomObject>
    <description>A CreditsafeCompanyAdvisorV2</description>
    <label>Creditsafe Company Advisor</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Creditsafe Company Advisor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Creditsafe Company Advisors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>