force-app/main/default/objects/Creditsafe_Company_Advisor__c/fields/Auditor_Name__c.field-meta.xml
<CustomField>
    <fullName>Auditor_Name__c</fullName>
    <description>Full name of the company who is responsible for auditing.</description>
    <label>Auditor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>