force-app/main/default/objects/Creditsafe_Company_Advisor__c/fields/Creditsafe_Company_Report_Full__c.field-meta.xml
<CustomField>
    <fullName>Creditsafe_Company_Report_Full__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A detailed report about a company.</description>
    <label>Creditsafe Company Report Full</label>
    <referenceTo>Creditsafe_Company_Report_Full__c</referenceTo>
    <relationshipLabel>Advisors</relationshipLabel>
    <relationshipName>Advisors</relationshipName>
    <type>Lookup</type>
</CustomField>