force-app/main/default/objects/Creditsafe_Company_Advisor__c/fields/Solicitor_Name__c.field-meta.xml
<CustomField>
    <fullName>Solicitor_Name__c</fullName>
    <description>Name of solicitors.</description>
    <label>Solicitor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>